<resources>
    <string name="app_name">Grocery</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_text">Not have account? Register</string>
    <string name="register">Register</string>
    <string name="have_acc">Already have a account? Login</string>
    <string name="username">Username</string>
    <string name="phone">Phone number</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="recover_password">Recover Password</string>
    <string name="recover">Recover</string>
    <string name="complete_address">Complete Address</string>
    <string name="todo">TODO</string>
    <string name="confirm_password">Confirm password</string>
    <string name="seller_reg">Are you a seller? Register a seller</string>
    <string name="shop_name">Shop name</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="add_product">Mahsulot qo\'shish</string>
    <string name="title">Parda Nomi</string>
    <string name="description">Izoh</string>
    <string name="category">Kategoriyani tanlang</string>
    <string name="quantity">Miqdori</string>
    <string name="price">Narxi</string>
    <string name="discount">Chegirma</string>
    <string name="disPrice">Chegirma narxi</string>
    <string name="disPriceNote">Chegirma izohi</string>
    <string name="location">Joylashuvini tanlang</string>
    <string name="products">Mahsulotlar</string>
    <string name="orders">Orders</string>
    <string name="disc_eg">10 % off</string>
    <string name="search">Qidiruv</string>
    <string name="product_details">Mahsulot haqida</string>
    <string name="edit_product">O\'zgartirish</string>
    <string name="showing_all">Hammasini ko\'rsatish</string>
    <string name="save_me">Save me</string>
    <string name="barcode">Barcode</string>
    <string name="qrcode">QR Code</string>
    <string name="reserve">Bron qilish</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="addedAt">Qo\'shilgan vaqt:</string>
    <string name="editAtTV">O\'zgargan vaqti</string>
    <string name="checkChB">Tekshirish</string>
</resources>