<?xml version="1.0" encoding="utf-8"?>
<!--Bottom sheet layout to display product details and edit and delete it-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--       -->

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/shape_rect01"
        android:padding="10dp" >

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/ic_back_white" />

        <ImageButton
            android:id="@+id/delBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/ic_del_white"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:id="@+id/editBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/ic_edit_white"
            android:layout_toStartOf="@id/delBtn"/>
        
        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/product_details"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
    
    <ImageView
        android:id="@+id/prIconIV"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:src="@drawable/ic_add_shopping_white"
        android:layout_marginTop="70dp"
        android:padding="5dp"
        android:adjustViewBounds="true" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/prIconIV"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="10dp" >
        <TextView
            android:id="@+id/discNoteTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rect05"
            android:padding="5dp"
            android:textSize="10sp"
            android:text="@string/disc_eg"
            android:paddingStart="5dp"
            android:textColor="@color/colorGreen"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/descTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/catTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/quanTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/quantity"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/timesRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >
            <TextView
                android:id="@+id/gap1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/addedAt"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/addedAtTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_00_00_00"
                android:textColor="@color/black"
                android:layout_toEndOf="@id/gap1"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/timeRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >
            <TextView
                android:id="@+id/gap2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/editAtTV"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/editAtTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_00_00_00"
                android:textColor="@color/black"
                android:layout_toEndOf="@id/gap2"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >
            <CheckBox
                android:id="@+id/isReserveChB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/reserve" />

            <CheckBox
                android:id="@+id/isCheckChB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_toEndOf="@id/isReserveChB"
                android:text="@string/checkChB" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >
            <TextView
                android:id="@+id/discPriceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/disPrice"
                android:textColor="@color/grey2" />
            <TextView
                android:id="@+id/priceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/price"
                android:layout_toEndOf="@id/discPriceTV"
                android:textColor="@color/grey2" />


        </RelativeLayout>





    </LinearLayout>



</RelativeLayout>