<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

<!--    Toolbar     -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:background="@drawable/shape_rect01" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
    
    <ImageView
        android:id="@+id/iconIV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_circle01"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_key_white"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:padding="7dp" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconIV"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/ic_mail_gray"
        android:drawablePadding="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/passET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailET"
        android:layout_margin="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/ic_lock_gray"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />


    <TextView
        android:id="@+id/forgotTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passET"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/forgot_password" />


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotTV"
        android:minWidth="120dp"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorPrimary" />

    <TextView
        android:id="@+id/noAccTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/register_text" />

</RelativeLayout>