<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.RegisterAdminActivity">

    <!--    Toolbar     -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:background="@drawable/shape_rect01" >
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back_white"
            android:background="@null"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <ImageButton
            android:id="@+id/gpsBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_gps_white"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:contentDescription="@string/todo" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iconIV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_circle01"
        android:layout_marginTop="35dp"
        android:src="@drawable/ic_key_white"
        android:layout_centerHorizontal="true"
        android:padding="4dp"
        android:contentDescription="@string/todo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconIV">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.blogspot.atifsoftwares.circularimageview.CircularImageView
                android:id="@+id/profileCIV"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_person_gray"
                app:c_border="true"
                app:c_border_color="@color/colorPrimary"
                app:c_border_width="1dp" />

            <EditText
                android:id="@+id/usernameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profileCIV"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_person_gray"
                android:drawablePadding="5dp"
                android:hint="@string/username"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp" />

            <EditText
                android:id="@+id/shopNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameET"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_store_gray"
                android:drawablePadding="5dp"
                android:hint="@string/shop_name"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp" />

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/shopNameET"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_mail_gray"
                android:drawablePadding="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <EditText
                android:id="@+id/passET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailET"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_lock_gray"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <EditText
                android:id="@+id/confPassET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passET"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_lock_gray"
                android:drawablePadding="5dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <EditText
                android:id="@+id/phoneET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/confPassET"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_phone_gray"
                android:drawablePadding="5dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="10dp" />

            <EditText
                android:id="@+id/deliveryET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneET"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_delivery_gray"
                android:drawablePadding="5dp"
                android:hint="@string/delivery_fee"
                android:inputType="numberDecimal"
                android:padding="10dp" />

            <LinearLayout
                android:id="@+id/addressLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/deliveryET" >
                <EditText
                    android:id="@+id/countryET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_rect02"
                    android:drawableStart="@drawable/ic_loc_gray"
                    android:drawablePadding="5dp"
                    android:hint="@string/country"
                    android:inputType="textPostalAddress"
                    android:padding="10dp" />
                <EditText
                    android:id="@+id/stateET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_rect02"
                    android:drawableStart="@drawable/ic_loc_gray"
                    android:drawablePadding="5dp"
                    android:hint="@string/state"
                    android:inputType="textPostalAddress"
                    android:padding="10dp" />
                <EditText
                    android:id="@+id/cityET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_rect02"
                    android:drawableStart="@drawable/ic_loc_gray"
                    android:drawablePadding="5dp"
                    android:hint="@string/city"
                    android:inputType="textPostalAddress"
                    android:padding="10dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/addressET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/addressLL"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_loc_gray"
                android:drawablePadding="5dp"
                android:hint="@string/complete_address"
                android:inputType="textEmailAddress|textMultiLine"
                android:padding="10dp" />

            <Button
                android:id="@+id/regAdminBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/addressET"
                android:minWidth="120dp"
                android:text="@string/register"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/colorPrimary" />


        </RelativeLayout>

    </ScrollView>




</RelativeLayout>